@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- Added support for floating point Fl_Spinner in the
+	  API, documentation, and Fluid (STR #1331)
 	- Repeat button now cancels timeout if it should get 
 	  deactivated during a callback (STR #1330)
 	- Added support for assigning Fl_Menu_Items to array 
